Some changes to sync up the old and new CompositeFileCollection hierarchies.